--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "js-yaml": "^4.1.0",
+    "kuroshiro": "^1.2.0",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mirai-ts": "^2.2.1"
   },
   "devDependencies": {
