--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "js-yaml": "^4.1.0",
     "kuroshiro": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
-    "mirai-ts": "^2.2.1"
+    "mirai-ts": "^2.2.1",
+    "puppeteer": "^13.5.2"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
