--- a/config/cook-menu.yml
+++ b/config/cook-menu.yml
@@ -34,3 +34,30 @@ list:
   - 披萨
   - 麻辣烫
   - 泡面（不要酸菜）
+  - 菠菜炒鸡蛋
+  - 炒滑蛋
+  - 炒茄子
+  - 炒青菜
+  - 葱煎豆腐
+  - 地三鲜
+  - 干锅花菜
+  - 蚝油三鲜菇
+  - 蚝油生菜
+  - 红烧冬瓜
+  - 红烧茄子
+  - 虎皮青椒
+  - 冷吃兔
+  - 荔枝肉
+  - 凉拌鸡丝
+  - 萝卜炖羊排
+  - 麻辣香锅
+  - 梅菜扣肉
+  - 啤酒鸭
+  - 水煮牛肉
+  - 水煮肉片
+  - 蒜苔炒肉末
+  - 糖醋里脊
+  - 糖醋排骨
+  - 土豆炖排骨
+  - 无骨鸡爪
+  - 西红柿牛腩
