--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "kuroshiro": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mirai-ts": "^2.2.1",
-    "puppeteer": "^13.5.2"
+    "puppeteer": "^13.5.2",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
