--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^17.0.23"
+    "@types/node": "^17.0.23",
+    "esno": "^0.16.3"
   }
 }
