--- a/config/cook-menu.yml
+++ b/config/cook-menu.yml
@@ -61,3 +61,30 @@ list:
   - 土豆炖排骨
   - 无骨鸡爪
   - 西红柿牛腩
+  - 昂刺鱼豆腐汤
+  - 勾芡香菇汤
+  - 金针菇汤
+  - 菌菇炖乳鸽
+  - 罗宋汤
+  - 米粥
+  - 皮蛋瘦肉粥
+  - 生汆丸子汤
+  - 西红柿鸡蛋汤
+  - 小米粥
+  - 银耳莲子粥
+  - 紫菜蛋花汤
+  - 煮锅蒸米饭
+  - 披萨饼皮
+  - 热干面
+  - 日式咖喱饭
+  - 烧饼
+  - 手工水饺
+  - 酸辣蕨根粉
+  - 汤面
+  - 微波炉腊肠煲仔饭
+  - 西红柿鸡蛋挂面
+  - 扬州炒饭
+  - 炸酱面
+  - 蒸卤面
+  - 中式馅饼
+  - 煮泡面加蛋
