--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node dist/main.js",
     "build": "tsc",
     "deploy": "pm2 start dist/main.js --name=bot",
-    "re": "npm run build && pm2 restart bot"
+    "re": "npm run build && pm2 restart bot",
+    "test": "tsc && node dist/main.test.js"
   },
   "keywords": [],
   "author": "",
