--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "start": "tsc && node dist/main.js",
     "build": "tsc",
     "deploy": "pm2 start dist/main.js --name=bot",
@@ -16,6 +17,8 @@
   "dependencies": {
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
     "js-yaml": "^4.1.0",
     "kuroshiro": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
@@ -26,6 +29,8 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.23",
+    "eslint": "^8.27.0",
+    "eslint-plugin-import": "^2.26.0",
     "esno": "^0.16.3"
   }
 }
