--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@genshin-kit/core": "^2.6.2",
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
+    "i": "^0.3.7",
     "js-yaml": "^4.1.0",
     "kuroshiro": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mirai-ts": "^2.2.1",
+    "npm": "^9.1.1",
     "puppeteer": "^13.5.2",
     "reflect-metadata": "^0.1.13"
   },
