--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,12 @@
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
-  }
+  },
+  "cSpell.words": [
+    "Genshin",
+    "kuromoji",
+    "kuroshiro",
+    "mihoyo",
+    "mirai"
+  ]
 }
