--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "fs-extra": "^10.1.0",
+    "genshin-gacha-kit": "^1.1.0",
     "glob": "^8.0.3",
     "i": "^0.3.7",
     "js-yaml": "^4.1.0",
