feat(arknight): 更新

--- a/config/arknights-gacha.yml
+++ b/config/arknights-gacha.yml
@@ -1,4 +1,15 @@
 -
+
+  normal:
+    name: 常驻
+  limit:
+    name: 联合
+    all:
+      ssr: 铃兰/森蚺/远牙/澄闪
+      sr: 空/慑砂/断崖/灰毫/蚀清/风丸
+      r: 夜烟/远山/杰西卡/流星/白雪/清道夫/红豆/杜宾/缠丸/霜叶/慕斯/砾/暗索/末药/调香师/角峰/蛇屠箱/古米/深海色/地灵/阿消/猎蜂/格雷伊/苏苏洛/桃金娘/红云/梅/安比尔/宴/刻刀/波登可/卡达/子/酸糖/芳汀/泡泡/杰克/松果/豆苗/深靛/罗比菈塔/褐果/铅踝
+      n: 芬/香草/翎羽/玫兰莎/卡缇/米格鲁/克洛丝/炎熔/芙蓉/安赛尔/史都华德/梓兰/空爆/月见夜/斑点/泡普卡
+-
   limit:
     name: 限定
     up:
