--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@genshin-kit/core": "^2.6.2",
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
-    "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-promise": "^6.1.1",
     "fs-extra": "^10.1.0",
     "genshin-gacha-kit": "^1.1.0",
     "glob": "^8.0.3",
@@ -27,7 +25,7 @@
     "js-yaml": "^4.1.0",
     "kuroshiro": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
-    "mirai-ts": "^2.2.1",
+    "mirai-ts": "^2.4.3",
     "npm": "^9.1.1",
     "pug": "^3.0.2",
     "puppeteer": "^13.5.2",
@@ -39,7 +37,10 @@
     "@types/pug": "^2.0.6",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.0",
+    "eslint-plugin-promise": "^6.1.1",
     "esno": "^0.16.3"
   }
 }
