--- a/config/cook-menu.yml
+++ b/config/cook-menu.yml
@@ -88,3 +88,37 @@ list:
   - 蒸卤面
   - 中式馅饼
   - 煮泡面加蛋
+  - 凉拌莴笋
+  - 凉拌油麦菜
+  - 麻婆豆腐
+  - 蒲烧茄子
+  - 芹菜拌茶树菇
+  - 陕北熬豆角
+  - 上汤娃娃菜
+  - 手撕包菜
+  - 水油焖蔬菜
+  - 素炒豆角
+  - 酸辣土豆丝
+  - 糖拌西红柿
+  - 莴笋叶煎饼
+  - 西红柿炒鸡蛋
+  - 西红柿豆腐汤羹
+  - 西葫芦炒鸡蛋
+  - 洋葱炒鸡蛋
+  - 猪皮冻
+  - 猪肉烩酸菜
+  - 柱候牛腩
+  - 孜然牛肉
+  - 醉排骨
+  - 咖喱炒蟹
+  - 鲤鱼炖白菜
+  - 清蒸鲈鱼
+  - 清蒸生蚝
+  - 水煮鱼
+  - 蒜蓉虾
+  - 糖醋鲤鱼
+  - 微波葱姜黑鳕鱼
+  - 香煎翘嘴鱼
+  - 小龙虾
+  - 油焖大虾
+  - 草莓泡芙
