--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "kuroshiro": "^1.2.0",
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mirai-ts": "^2.4.3",
+    "node-schedule": "^2.1.1",
     "npm": "^9.1.1",
     "pug": "^3.0.2",
     "puppeteer": "^13.5.2",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.23",
+    "@types/node-schedule": "^2.1.0",
     "@types/pug": "^2.0.6",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
