--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@genshin-kit/core": "^2.6.2",
     "axios": "^0.26.1",
+    "canvas": "^2.11.0",
     "cheerio": "^1.0.0-rc.10",
     "fs-extra": "^10.1.0",
     "genshin-gacha-kit": "^1.1.0",
+    "get-pixels": "^3.3.3",
+    "gif-encoder": "^0.7.2",
     "glob": "^8.0.3",
     "i": "^0.3.7",
     "js-yaml": "^4.1.0",
@@ -33,6 +36,8 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/get-pixels": "^3.3.2",
+    "@types/gif-encoder": "^0.7.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^17.0.23",
     "@types/node-schedule": "^2.1.0",
