--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "module": "commonjs",
     "rootDir": "./src",
     "outDir": "./dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
