--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
 canvas_binary_host_mirror=https://npm.taobao.org/mirrors/node-canvas-prebuilt/
+nodejieba_binary_host_mirror=https://npm.taobao.org/mirrors/nodejieba
