--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "mirai-ts": "^2.4.3",
     "node-schedule": "^2.1.1",
+    "node-wordcloud": "^0.0.2",
     "nodejieba": "^2.6.0",
     "npm": "^9.1.1",
     "pug": "^3.0.2",
